@@ -86,6 +86,7 @@ DECL_OR_DEF(CONFIG_SAVED_REMOTELY);
 DECL_OR_DEF(EXPLAIN_GLOBALPASSWD);
 DECL_OR_DEF(FILTER_NOT_USED_YET);
 DECL_OR_DEF(FILTER_CONFIRM_OVERWRITE);
+DECL_OR_DEF(FILTER_CREATE_TARGET);
 DECL_OR_DEF(IMPORT_FOLDERS_UNDER_ROOT);
 DECL_OR_DEF(MOVE_EXPUNGE_CONFIRM);
 DECL_OR_DEF(APPLY_QUICK_FILTER_NOW);
